docs: swagger for notes
